--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ node_modules
 
 #angular specific
 .angular
+create-a-component-driven-by-inputs/solution/.angular/cache/19.0.6/cert-challenge-template/vite/deps/_metadata.json
